# EECS-658

./: .gitignore  README.md
Assignment1/: README.md  Rubric 1.docx  main.py  pyproject.toml
Assignment1/src/: NBClassifier.py
Assignment2/: README.md  REPORT.md  Rubric 2.docx  main.py  pyproject.toml
Assignment2/src/: CompareMLModels.py
Assignment3/: README.md  REPORT.md  Rubric 3.docx  dbn.py  main.py
Assignment3/src/: CompareMLModelsV2.py
Assignment4/: Deliverable4POV.xlsx  README.md  REPORT.md  Rubric 4.docx  main.py  pyproject.toml
Assignment4/src/: CompareFeatureSelectionMethods.py  checkv.py
Assignment5/: README.md  Rubric 5.docx  Rubric 6.docx  main.py  pyproject.toml
Assignment5/src/: Assignment5.py  checkv.py
Assignment6/: README.md  REPORT.md  Rubric 6.docx  main.py  pyproject.toml  refs.bib
Assignment6/src/: Assignment6.py
Assignment7/: README.md  REPORT.md  Rubric 7.docx  main.py  pyproject.toml
Assignment7/src/: Assignment7.py  checkv.py
scripts/: zip.ps1
