[tool.poetry]
name = "assignment3"
version = "0.1.0"
description = ""
authors = ["Cody Duong <duongcody507@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.14.1"
numpy = "^2"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"